src/test/deca/context/valid/decl_param.deca
// Description:
//    Test de la déclaration d'un paramètre dans une méthode
//
// Résultats:
//    ok
//
// Historique:
//    créé le 21/01/2017

class A {
  void helloWorld(int a) {
    println("Hello World !");
  }
}
