src/test/deca/context/invalid/return_mauvais_type.deca
// Description:
//    Test de la déclaration d'une méthode renvoyant le mauvais type
//
// Résultats:
//    Ligne 12 : Affectation à un objet de type int une valeur de type float impossible (règle 3.28)
//
// Historique:
//    créé le 21/01/2017

class A {
  int helloWorld(float a) {
    return a;
  }
}
